--- a/index.html
+++ b/index.html
@@ -1,204 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-
-    <link rel="stylesheet" href="css/style.css">
-    <!-- Boostrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-</head>
-<body>
-    <main class="main-wrapper">
-        <!-- <div class="parallax"></div> -->
-        
-        <section class="s1 block block--intro">
-            <div class="block-wrapper row">
-                <div class="col-lg-6 block-image">
-                    <div class="block-img">
-                        <img src="./img/me.jpeg" alt="reyschelle">
-                    </div>
-                </div>
-                <div class="col-lg-6 block-content">
-                    <div class="block-content--wrapper">
-                        <h1 class="greetings">Hello, there! My name is</h1>
-                        <h2 class="name">Reyschelle Iradiel</h2>
-                        <h2 class="position">A Front-End Web Developer</h2>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="s2 block block--about">
-            <div class="block-wrapper block-center flex-column">
-                <div class="block-content">
-                    <h2 class="block-title">About Me</h2>
-
-                    <p>My name is Reyschelle Iradiel, I'm a frontend web developer. I'm very passionate and dedicated in my work.
-                        With 3 years of experience, I have acquired the skills necessary to build great websites</p>
-
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="item">
-                                <label for="">Name:</label>
-                                <p>Reyschelle Iradiel</p>
-                            </div>
-                            <div class="item">
-                                <label for="">Phone:</label>
-                                <p>09683349065 / 09777851235</p>
-                            </div>
-                            <div class="item">
-                                <label for="">Email:</label>
-                                <p>reyschelleiradiel@gmail.com</p>
-                            </div>
-                            <div class="item">
-                                <label for="">Linkedin / Jobstreet:</label>
-                                <p>reyschelleiradiel</p>
-                            </div>
-                        </div>
-                        <div class="col-sm-6"></div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="s2 block block--skills">
-            <div class="block-wrapper block-center flex-column">
-                <div class="block-content">
-                    <h2 class="block-title">Skills</h2>
-
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <p>Experience creating webpages with:
-                                <ul>
-                                    <li>Laravel</li>
-                                    <li>VueJS</li>
-                                    <li>AngularJS</li>
-                                </ul>
-                            </p>
-                            <p>Experience using <b>git</b> and <b>bitbucket</b> for project</p>
-                            <p>Knowledgeable with <b>Tailwind CSS</b> and <b>ReactJS</b></p>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="items-wrapper">
-                                <div class="item">
-                                    <div class="item-info">
-                                        <div class="label">
-                                            <img src="./img/html.svg" alt="" class="item-img">
-                                            <label for="">HTML</label>
-                                        </div>
-                                        <span>95%</span>
-                                    </div>
-                                    <div class="progress html"></div>
-                                </div>
-                                <div class="item">
-                                    <div class="item-info">
-                                        <div class="label">
-                                            <img src="./img/css.svg" alt="" class="item-img">
-                                            <label for="">CSS</label>
-                                        </div>
-                                        <span>95%</span>
-                                    </div>
-                                    <div class="progress css"></div>
-                                </div>
-                                <div class="item">
-                                    <div class="item-info">
-                                        <div class="label">
-                                            <img src="./img/sass.svg" alt="" class="item-img">
-                                            <label for="">SASS</label>
-                                        </div>
-                                        <span>90%</span>
-                                    </div>
-                                    <div class="progress sass"></div>
-                                </div>
-                                <div class="item">
-                                    <div class="item-info">
-                                        <div class="label">
-                                            <img src="./img/bootstrap.svg" alt="" class="item-img">
-                                            <label for="">Bootstrap</label>
-                                        </div>
-                                        <span>90%</span>
-                                    </div>
-                                    <div class="progress bootstrap"></div>
-                                </div>
-                                <div class="item">
-                                    <div class="item-info">
-                                        <div class="label">
-                                            <img src="./img/javascript.svg" alt="" class="item-img">
-                                            <label for="">Javascript</label>
-                                        </div>
-                                        <span>70%</span>
-                                    </div>
-                                    <div class="progress javascript"></div>
-                                </div>
-                                <div class="item">
-                                    <div class="item-info">
-                                        <div class="label">
-                                            <img src="./img/jquery.svg" alt="" class="item-img">
-                                            <label for="">Jquery</label>
-                                        </div>
-                                        <span>70%</span>
-                                    </div>
-                                    <div class="progress jquery"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="s3 block block--services">
-            <div class="block-wrapper block-center flex-column">
-                <div class="block-content">
-                    <h2 class="block-title">My Services</h2>
-                    <div class="row">
-                        <div class="item col-sm-4">
-                            <div class="item-wrapper">
-                                <span class="fa fa-code fa-2x"></span>
-                                <div class="item-desc mt-2">
-                                    <h3>Web Development</h3>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item col-sm-4">
-                            <div class="item-wrapper">
-                                <span class="fa fa-laptop fa-2x"></span>
-                                <div class="item-desc mt-2">
-                                    <h3>Web Design</h3>
-                                </div>
-                            </div>
-                        </div> 
-                        <div class="item col-sm-4">
-                            <div class="item-wrapper">
-                                <span class="fa fa-tablet fa-2x"></span>
-                                <div class="item-desc mt-2">
-                                    <h3>Responsive Design</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-    </main>
-</body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <!-- Boostrap script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- One Scroll Page -->
-    <script src="js/onepage-scroll.js"></script>
-    <script>
-        $(function() {
-            $('.main-wrapper').onepage_scroll({
-                loop: false,
-                pagination: false,
-            });
-        })
-    </script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100..700&family=Rubik:wght@800&display=swap" rel="stylesheet">
+    <title>Reyschelle Iradiel</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
